@@ -16,18 +16,19 @@
 		</script>
 	</head>
 	<body onload="Game.Init()">
-		<div class="container">
+		<div class="container" height="100%">
 			<div id="main" class="row">
 				<div class="span12">
 					<div class="row">
 						<div id="phrase" align="center"></div>
-						<div class="span9">
+						<div class="span4">
 							<input type="button" value="Pick!" onclick="Game.Pick()" />
 							<span id="shrooms"></span><br />
 							<span id="sps"></span>
 							
 						</div>
-						<div class="span3">
+						<div class="span4" align="center"><img src="images/dwarf.png" /></div>
+						<div class="span4">
 							<div id="shop"></div>
 						</div>
 					</div>
