@@ -1,5 +1,9 @@
+25/09/2013
+- added horrible dwarf
+
 24/09/2013
-- added buttered cats
+- added buttered cats engine
+- fixed minor bugs
 
 20/09/2013
 - started development
